RIP-v10.1- /mobile overflow fix in progress

--- a/css/login.css
+++ b/css/login.css
@@ -4,10 +4,8 @@
   grid-template-rows   : 1fr;
   padding-top          : 90px;
   width                : 100%;
-  height               : 100vh;
-  overflow-y: scroll !important;
-  overflow: overlay !important;
-  overflow-x: hidden !important;
+  height               : auto;
+
   grid-template-areas  :
     " content header";
 }
@@ -345,8 +343,7 @@
 
   .full-page {
     display       : flex;
-    flex-direction: column !important;
-    width         : 100%;
+    flex-direction: column;
     padding-top   : 0px;
     justify-content: flex-start;
   }
