--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,6 @@ html {
   font-family     : "Mulish", sans-serif;
   scroll-behavior : smooth;
   overflow        : hidden !important;
-  background-color: #fcfcfe;
 }
 
 html {
